bk_ida/gobmkida/c1/is_ko
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_ko/src/engine/board.c:3002:24: error: use of undeclared identifier 'byte_9AA89F'
v9 = ( unsigned __int8)byte_9AA89F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_ko/src/engine/board.c:3016:25: error: use of undeclared identifier 'byte_9AA88C'
v10 = ( unsigned __int8)byte_9AA88C[pos]; 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_ko/src/obj/1/board.o] Error 1
